build.gradle 정리, 최신회차 등록 시 회차 존재여부 검증 추가